# deck-vision

./: Dockerfile  GOAL.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
data/: block_words.txt
examples/: deck_img_1_code.txt  deck_img_2_code.txt  deck_img_3_code.txt  deck_img_4_code.txt  deck_img_5_code.txt  deck_img_6_code.txt  deck_img_7_code.txt
src/deck_vision/: __init__.py  assets.py  cli.py  errors.py  recognize.py  server.py  share_code.py
tests/: test_assets.py  test_cli.py  test_examples_integration.py  test_recognize_synthetic.py  test_server.py  test_share_code.py
