[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "deck-vision"
version = "0.1.0"
description = "Recognize Genius Invokation TCG deck sharing images and emit share codes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "numpy>=2.0",
  "opencv-python-headless>=4.10",
  "pillow>=10.0",
  "platformdirs>=4.0",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.115",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]
test = [
  "pytest>=8.0",
  "fastapi>=0.115",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
deck-vision = "deck_vision.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires cached or live deck assets",
]
